add category section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,72 @@
  </div>
 <!-- Home Section end -->
 
+<!-- Category Section start -->
+
+<!-- Category Section end -->
+<section class="category">
+  <h2 class="heading">job categories</h2>
+
+  <div class="box-container-category">
+
+    <a href="#" class="box-category">
+      <i class="fa-solid fa-code"></i>
+      <div>
+        <h3>web development</h3>
+        <span>2200</span>
+      </div>
+    </a>
+    <a href="#" class="box-category">
+      <i class="fa-solid fa-pen"></i>
+      <div>
+        <h3>designer</h3>
+        <span>700</span>
+      </div>
+    </a>
+    <a href="#" class="box-category">
+      <i class="fa-solid fa-chalkboard-user"></i>
+      <div>
+        <h3>teacher</h3>
+        <span>1200</span>
+      </div>
+    </a>
+    <a href="#" class="box-category">
+      <i class="fa-solid fa-bullhorn"></i>
+      <div>
+        <h3>marketing</h3>
+        <span>2800</span>
+      </div>
+    </a>
+    <a href="#" class="box-category">
+      <i class="fa-solid fa-headset"></i>
+      <div>
+        <h3>service</h3>
+        <span>2200</span>
+      </div>
+    </a>
+    <a href="#" class="box-category">
+      <i class="fa-solid fa-wrench"></i>
+      <div>
+        <h3>engineer </h3>
+        <span>3200</span>
+      </div>
+    </a>
+    <a href="#" class="box-category">
+      <i class="fa-solid fa-comments-dollar"></i>
+      <div>
+        <h3>finance</h3>
+        <span>2200</span>
+      </div>
+    </a>
+    <a href="#" class="box-category">
+      <i class="fa-solid fa-person-digging"></i>
+      <div>
+        <h3>labour</h3>
+        <span>4000</span>
+      </div>
+    </a>
+  </div>
+</section>
  <!-- Footer section start -->
   <footer class="footer">
     <section class="grid">
@@ -114,8 +180,6 @@
         dashboard
        </a>
       </div>
-
-      
       <div class="box-footer">
         <h3>follow us</h3>
         <a href="https://www.facebook.com/">
