add about section

--- a/about.html
+++ b/about.html
@@ -35,6 +35,20 @@
   </section>
  </header>
 
+ <!-- About section start -->
+  <div class="section-title">about us</div>
+  <section class="about">
+
+    <img src="asserts/about-img.jpg" alt="">
+    <div class="box-about">
+      <h3>why choose us?</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam adipisci iusto nostrum tenetur enim eum est possimus dicta ipsam dolorem corporis cum facere, rerum delectus vero quia, amet consequuntur modi. Consequatur maxime praesentium accusamus voluptatum laboriosam atque debitis id voluptate. Reiciendis dolores vel nobis, optio vitae eos est reprehenderit sed.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi ab repudiandae molestias tenetur quisquam voluptate porro excepturi hic aliquid soluta nobis consequuntur modi, voluptatem, molestiae voluptatibus facilis accusamus temporibus officiis?</p>
+
+      <a href="contact.html" class="btn">contact us</a>
+    </div>
+  </section>
+ <!-- About section end -->
 
  <!-- Footer section start -->
   <footer class="footer">
