add reviews section

--- a/about.html
+++ b/about.html
@@ -50,6 +50,142 @@
   </section>
  <!-- About section end -->
 
+  <!-- Reviews section start -->
+  <div class="section-title">top reviews</div>
+
+<section class="reviews">
+ <div class="box-container-reviews">
+  <div class="box-reviews">
+    <div class="stars">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star-half-stroke"></i>
+    </div>
+
+    <h3 class="title">amazing results</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolores iure doloribus qui hic laudantium rerum in exercitationem recusandae labore.</p>
+
+    <div class="user">
+      <img src="asserts/user-1.jpg" alt="user">
+      <div>
+        <h3>amy gill</h3>
+        <span>web designer</span>
+      </div>
+    </div>
+  </div>
+  <div class="box-reviews">
+    <div class="stars">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+    </div>
+
+    <h3 class="title">uplift career</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolores iure doloribus qui hic laudantium rerum in exercitationem recusandae labore.</p>
+
+    <div class="user">
+      <img src="asserts/user-3.jpg" alt="user">
+      <div>
+        <h3>yun sham</h3>
+        <span>dot net developer</span>
+      </div>
+    </div>
+  </div>
+  <div class="box-reviews">
+    <div class="stars">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star-half-stroke"></i>
+    </div>
+
+    <h3 class="title">boost my career</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolores iure doloribus qui hic laudantium rerum in exercitationem recusandae labore.</p>
+
+    <div class="user">
+      <img src="asserts/user-2.jpg" alt="user">
+      <div>
+        <h3>somy jecson</h3>
+        <span>backend developer</span>
+      </div>
+    </div>
+  </div>
+  <div class="box-reviews">
+    <div class="stars">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star-half-stroke"></i>
+    </div>
+
+    <h3 class="title">boost my career</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolores iure doloribus qui hic laudantium rerum in exercitationem recusandae labore.</p>
+
+    <div class="user">
+      <img src="asserts/user-2.jpg" alt="user">
+      <div>
+        <h3>somy jecson</h3>
+        <span>backend developer</span>
+      </div>
+    </div>
+  </div>
+  <div class="box-reviews">
+    <div class="stars">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star-half-stroke"></i>
+    </div>
+
+    <h3 class="title">boost my career</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolores iure doloribus qui hic laudantium rerum in exercitationem recusandae labore.</p>
+
+    <div class="user">
+      <img src="asserts/user-2.jpg" alt="user">
+      <div>
+        <h3>somy jecson</h3>
+        <span>backend developer</span>
+      </div>
+    </div>
+  </div>
+  <div class="box-reviews">
+    <div class="stars">
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star-half-stroke"></i>
+    </div>
+
+    <h3 class="title">boost my career</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolores iure doloribus qui hic laudantium rerum in exercitationem recusandae labore.</p>
+
+    <div class="user">
+      <img src="asserts/user-2.jpg" alt="user">
+      <div>
+        <h3>somy jecson</h3>
+        <span>backend developer</span>
+      </div>
+    </div>
+  </div>
+ </div>
+</section>  
+  <!-- Reviews section end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
  <!-- Footer section start -->
   <footer class="footer">
     <section class="grid">
