adding job details page on all jobs page

--- a/view_job.html
+++ b/view_job.html
@@ -35,6 +35,91 @@
   </section>
  </header>
 
+ <!-- View Jobs section start -->
+  <section class="job-details">
+    <h2 class="heading">job details</h2>
+
+    <div class="details">
+      <div class="job-info">
+        <h3>senior web designer</h3>
+        <a href="view_company.html">IT infosys co.</a>
+        <p>
+          <i class="fa-solid fa-location-dot"></i>
+          pune, maharastra
+        </p>
+      </div>
+      <div class="basic-details">
+        <h3>salary</h3>
+        <p>10000-25000 per month</p>
+        <h3>benifits</h3>
+        <p>work from home, health insurance</p>
+        <h3>job type</h3>
+        <p>part-time</p>
+        <h3>schdule</h3>
+        <p>day shift</p>
+      </div>
+
+      <ul>
+        <h3>reruirement</h3>
+        <li>education: <span>graduate</span></li>
+        <li>age: <span>25+</span></li>
+        <li>laguage: <span>hindi, english</span></li>
+        <li>experience: <span>3+ years</span></li>
+      </ul>
+
+      <ul>
+        <h3>skills</h3>
+        <li>Anguler</li>
+        <li>React.js</li>
+        <li>Redux toolkit</li>
+        <li>Agile mathology</li>
+        <li>figma tool</li>
+      </ul>
+
+      <div class="description">
+        <h3>job description</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis porro voluptas assumenda unde accusantium quia reprehenderit! Error, laborum incidunt veniam iusto magnam harum cumque voluptatem tenetur nobis ipsum. Fugit, corporis.</p>
+        <ul>
+          <li>hiring 2 candidate for this role</li>
+          <li>posted 3 days ago</li>
+        </ul>
+      </div>
+
+      <form action="" 
+      method="post"
+      class="flex-btn"
+      >
+
+      <input type="submit" value="apply now" name="apply" class="btn">
+       <button type="submit" class="save">
+        <i class="fa-regular fa-heart">
+          <span">save job</span>
+        </i>
+       </button>
+      </form>
+    </div>
+  </section>
+ <!-- View Jobs section end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
