add company info page

--- a/view_company.html
+++ b/view_company.html
@@ -35,6 +35,36 @@
   </section>
  </header>
 
+ <!-- Comapany details section start -->
+
+ <section class="view-comapany">
+  <h2 class="heading">company details</h2>
+
+  <div class="details">
+
+    <div class="info">
+      <img src="asserts/company--5.png" alt="">
+      <h3>IT infosys co.</h3>
+      <p>
+        <i class="fa-solid fa-location-dot"></i>
+        pune, maharastra
+      </p>
+    </div>
+    <div class="description">
+       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae libero dolores laboriosam eligendi qui, iusto explicabo, ducimus vero officia eveniet reiciendis assumenda, dolorem beatae quo exercitationem possimus. Consequuntur, molestias nobis?</p>
+       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam odio, corrupti reprehenderit omnis explicabo aut consequuntur ratione, magnam veniam libero voluptate nisi atque eum itaque sit illum maiores, eaque saepe.</p>
+    </div>
+
+      <ul>
+        <li>3 jobs posted</li>
+        <li>established at 21-05-2007</li>
+        <li>253 working employers/li>
+      </ul>
+  </div>
+  
+ </section>
+
+ <!-- Comapany details section end -->
 
  <!-- Footer section start -->
   <footer class="footer">
