add contact page

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <a href="login.html">account</a>
    </nav>
 
-   <a href="#" class="btn" style="margin-top: 0;">
+   <a href="jobs.html" class="btn" style="margin-top: 0;">
     post jobs
    </a>
   </section>
