--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,80 @@
     <a href="login.html">account</a>
    </nav>
 
-   <a href="#" class="btn" style="margin-top: 0;">
+   <a href="jobs.html" class="btn" style="margin-top: 0;">
     post jobs
    </a>
   </section>
  </header>
+
+<!-- contact secion start -->
+ 
+   <div class="section-title">contact us</div>
+   <section class="contact">
+    <div class="box-container">
+      <div class="box">
+        <i class="fa-solid fa-phone-volume"></i>
+        <a href="tel:23445689889">234-456-9889</a>
+        <a href="tel:23445689889">234-456-9889</a>
+      </div>
+      <div class="box">
+        <i class="fa-solid fa-envelope"></i>
+        <a href="mailto:infotech@gmail.com">infotech@gmail.com</a>
+        <a href="mailto:infotech@gmail.com">infotech@gmail.com</a>
+      </div>
+      <div class="box">
+        <i class="fa-solid fa-pen"></i>
+        <a href="#">
+          flat no. 1, a-1 builder, Royal socity, pune, maharastra, 402134
+        </a>
+      </div>
+    </div>
+   
+    <form action="">
+      <h3>drop your message</h3>
+      <div class="flex">
+        <div class="box">
+          <p>email <span>*</span></p>
+          <input type="email" 
+          required
+          name="email"
+          maxlength="20"
+          placeholder="enter your email"
+          class="input">
+        </div>
+        <div class="box">
+          <p>role <span>*</span></p>
+          <select name="role" class="input">
+            <option value="employee">job seeker(employee)</option>
+            <option value="employee">job provider(employee)</option>
+          </select>
+        </div>
+      </div>
+     
+      <p>message <span>*</span></p>
+      <textarea name="" id="" class="input" required maxlength="1000" rows="10" cols="30"></textarea>
+      <input type="submit" value="send message" class="btn" name="send">
+    </form>
+  </section>
+
+<!-- contact secion end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
  <!-- Footer section start -->
