--- a/jobs.html
+++ b/jobs.html
@@ -29,7 +29,7 @@
     <a href="login.html">account</a>
    </nav>
 
-   <a href="#" class="btn" style="margin-top: 0;">
+   <a href="jobs.html" class="btn" style="margin-top: 0;">
     post jobs
    </a>
   </section>
@@ -205,7 +205,7 @@
     </div>
     <div class="box-jobs">
       <div class="company">
-        <img src="asserts/company-5.png" alt="company-logo">
+        <img src="asserts/company-10.png" alt="company-logo">
         <div>
           <h3>TCS Telcom</h3>
           <p>10 days ago</p>
@@ -241,11 +241,11 @@
       <div class="company">
         <img src="asserts/company-6.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>HCL Technologies – IT services and consulting.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">Data Analyst</h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -273,13 +273,13 @@
     </div>
     <div class="box-jobs">
       <div class="company">
-        <img src="asserts/company-7.png" alt="company-logo">
+        <img src="asserts/company-11.jpg" alt="company-logo">
         <div>
           <h3>Infotech Technology pvt. ltd.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">Cloud Engineer</h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -307,13 +307,13 @@
     </div>
     <div class="box-jobs">
       <div class="company">
-        <img src="asserts/company-8.png" alt="company-logo">
+        <img src="asserts/company-12.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>Mindtree – IT services and digital transformation.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">DevOps Engineer</h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -343,11 +343,11 @@
       <div class="company">
         <img src="asserts/company-9.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>Slack (Salesforce) – Business communication platform.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">Site Reliability Engineer (SRE) </h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -377,11 +377,11 @@
       <div class="company">
         <img src="asserts/company-4.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>Spotify – Music streaming service.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">Penetration Tester (Ethical Hacker)</h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -411,11 +411,12 @@
       <div class="company">
         <img src="asserts/company-7.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>Slack (Salesforce) – Business communication platform.
+          </h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">Information Security Manager</h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -445,11 +446,11 @@
       <div class="company">
         <img src="asserts/company-2.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>HCL Technologies – IT services and consulting.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">Scrum Master </h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -479,11 +480,11 @@
       <div class="company">
         <img src="asserts/company-1.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>Tech Mahindra – IT services and telecommunications.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">IT Project Manager</h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -513,11 +514,11 @@
       <div class="company">
         <img src="asserts/company-3.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>L&T Infotech – IT services and consulting.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">System Administrator </h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
@@ -547,11 +548,11 @@
       <div class="company">
         <img src="asserts/company-8.png" alt="company-logo">
         <div>
-          <h3>Infotech Technology pvt. ltd.</h3>
+          <h3>Cisco Systems – Networking, cybersecurity, and IT infrastructure.</h3>
           <p>4 days ago</p>
         </div>
       </div>
-      <h3 class="job-title">software engineer</h3>
+      <h3 class="job-title">QA Engineer </h3>
       <p class="location">
         <i class="fa-solid fa-location-dot"></i>
         <span>indore, M.P</span>
