--- a/view_company.html
+++ b/view_company.html
@@ -29,7 +29,7 @@
     <a href="login.html">account</a>
    </nav>
 
-   <a href="#" class="btn" style="margin-top: 0;">
+   <a href="jobs.html" class="btn" style="margin-top: 0;">
     post jobs
    </a>
   </section>
@@ -43,7 +43,7 @@
   <div class="details">
 
     <div class="info">
-      <img src="asserts/company--5.png" alt="">
+      <img src="asserts/company-4.png" alt="">
       <h3>IT infosys co.</h3>
       <p>
         <i class="fa-solid fa-location-dot"></i>
