--- a/view_job.html
+++ b/view_job.html
@@ -29,7 +29,7 @@
     <a href="login.html">account</a>
    </nav>
 
-   <a href="#" class="btn" style="margin-top: 0;">
+   <a href="jobs.html" class="btn" style="margin-top: 0;">
     post jobs
    </a>
   </section>
@@ -41,7 +41,7 @@
 
     <div class="details">
       <div class="job-info">
-        <h3>senior web designer</h3>
+        <h3>senior web developer</h3>
         <a href="view_company.html">IT infosys co.</a>
         <p>
           <i class="fa-solid fa-location-dot"></i>
