add account page

--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
       required
       maxlength="20" class="input"
       >
-      <input 
-      type="submit" 
-      value="search job"
-      class="btn"
-      >
+      <a href="jobs.html" class="btn">search job</a>
     </form>
   </section>
  </div>
