--- a/registration.html
+++ b/registration.html
@@ -36,6 +36,64 @@
  </header>
 
 
+
+ <div class="account-form-container">
+
+  <section class="account-form">
+
+    <form action="" method="post">
+      <h3>create new account</h3>
+
+      <input type="text"
+      required
+      name="name"
+      maxlength="50"
+      placeholder="enter your name"
+      class="input">
+      <input type="email"
+      required
+      name="email"
+      maxlength="50"
+      placeholder="enter your email"
+      class="input">
+      <input type="password"
+      required
+      name="password"
+      maxlength="50"
+      placeholder="enter your password"
+      class="input">
+      <input type="password"
+      required
+      name="password"
+      maxlength="50"
+      placeholder="confirm your password"
+      class="input">
+      <p>already have an account? <a href="login.html">login now</a></p>
+      <!-- <input type="submit" value="login now" name="submit" class="btn"> -->
+       <a href="login.html" class="btn">Register now</a>
+    </form>
+  </section>
+ </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
  <!-- Footer section start -->
   <footer class="footer">
     <section class="grid">
