--- a/login.html
+++ b/login.html
@@ -35,9 +35,58 @@
   </section>
  </header>
 
+<!-- account section start -->
+ <div class="account-form-container">
+
+  <section class="account-form">
+
+    <form action="" method="post">
+      <h3>welcome back!</h3>
+
+      <input type="text"
+      required
+      name="name"
+      maxlength="50"
+      placeholder="enter your name"
+      class="input">
+      <input type="password"
+      required
+      name="password"
+      maxlength="50"
+      placeholder="enter your password"
+      class="input">
+      <p>don't have an account? <a href="registration.html">register now</a></p>
+      <!-- <input type="submit" value="login now" name="submit" class="btn"> -->
+       <a href="index.html" class="btn">login</a>
+    </form>
+  </section>
+ </div>
+<!-- account section end -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
  <!-- Footer section start -->
-  <footer class="footer">
+ 
+ <footer class="footer">
     <section class="grid">
       <div class="box-footer">
        <h3>quick links</h3>
